# vamsi

./: .env  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  py.typed  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
docs/: assignment.md  index.md
metrics/: README.md  __init__.py
prompt/: README.md  __init__.py
reports/: README.md
scripts/: run.bat  run.ps1
src/genai_project/: __init__.py  __main__.py  api.py  llm.py  prompts.py
tests/: test_api.py  test_basic.py
